EC-723 - Archive and prune synced items in batches
EC-723 - Merged changes for the SyncedMessageArchiver and SyncedMessageArchiverTest

EC-723 - Merged remaining changes